--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,10 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "dotenv>=0.9.9",
     "numpy>=2.3.1",
+    "ollama>=0.5.1",
+    "openai>=1.97.0",
     "pandas>=2.3.1",
     "pypdf>=5.8.0",
 ]
