--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "chromadb>=1.0.20",
     "dotenv>=0.9.9",
     "numpy>=2.3.1",
     "ollama>=0.5.1",
