--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "bm25s>=0.2.14",
     "chromadb>=1.0.20",
     "dotenv>=0.9.9",
     "numpy>=2.3.1",
@@ -12,7 +13,9 @@ dependencies = [
     "openai>=1.97.0",
     "pandas>=2.3.1",
     "pypdf>=5.8.0",
+    "pystemmer>=3.0.0",
     "pytest>=8.4.1",
+    "stemmer>=0.0.4",
 ]
 
 [tool.setuptools]
